force-app/main/default/objects/CityData__c/CityData__c.object-meta.xml
<CustomObject>
    <label>CityData</label>
    <nameField>
        <label>city__c</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CitiesData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>