force-app/main/default/objects/CityData__c/fields/continent__c.field-meta.xml
<CustomField>
    <fullName>continent__c</fullName>
    <label>continent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>