force-app/main/default/objects/CityData__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>